--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,15 +10,18 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                <p>Hier wird demnächst eine schöne Seite entstehen</p>
             </div>
-            <div class="col-10">
+            <div class="col-8">
                 <div class="container">
                     <h1>Wichteln</h1>
                     <h2>work in progress</h2>
                     <p>Hier wird demnächst eine schöne Seite entstehen</p>
+                    <a class="btn btn-primary" href="#" role="button">Wichtelevent</a>
                 </div>
             </div>
             <div class="col">
+                <p>Hier wird demnächst eine schöne Seite entstehen</p>
             </div>
         </div>
     </div>
