--- a/src/main/resources/templates/wichteln.html
+++ b/src/main/resources/templates/wichteln.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html th:replace="~{layout :: layout (~{::body})}" lang="en">
+<html th:replace="~{layout :: layout (~{::body})}"  lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/bootstrap.css">
-
     <title>Wichteln</title>
+    <meta charset="UTF-8">
+    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="#" th:src="@{/js/dynamic-form.js}" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-    <h1>Wichteln</h1>
-    <h2>work in progress</h2>
-    <script src="js/bootstrap.js"></script>
+    <div class="row">
+        <div class="col">
+        </div>
+        <div class="col-8">
+            <div class="container">
+                <h1>Wichteln</h1>
+                <div id="dynamic-form">
+                    <dynamic-form></dynamic-form>
+                </div>
+                <a class="btn btn-primary" href="#" role="button">Wichtelevent</a>
+            </div>
+        </div>
+        <div class="col">
+        </div>
+    </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
