--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,17 +5,17 @@
     <title>Wichteln</title>
   <meta http-equiv= "Content-Type" content="text/html"; charset="UTF-8" />
   <meta id="Viewport" name="viewport" content="width=device-width, initial-scale-1.0, maximum-scale-1, minimum-scale-1, user-scalable-no, shrink-to-fit=no">
+  <script src="https://unpkg.com/vue@next" defer></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="#" th:src="@{/js/dynamic-form.js}" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand">Wichteln</a>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Suche" aria-label="Suche">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <a class="navbar-brand" href="/">Wichteln</a>
       </div>
     </nav>
   </header>
