--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -14,8 +14,21 @@
   <title>Hello, world!</title>
 </head>
 <body>
-<div id="dynamic-form">
-  <dynamic-form></dynamic-form>
+
+<div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+      </div>
+      <div class="col">
+        <div id="dynamic-form">
+          <dynamic-form></dynamic-form>
+        </div>
+      </div>
+      <div class="col">
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Optional JavaScript; choose one of the two! -->
 
