--- a/src/main/resources/templates/wichteln.html
+++ b/src/main/resources/templates/wichteln.html
@@ -20,7 +20,7 @@
                 <div id="dynamic-form">
                     <dynamic-form></dynamic-form>
                 </div>
-                <a class="btn btn-primary" href="#" role="button">Wichtelevent</a>
+                <a class="btn btn-primary" href="#" role="button">erstellen</a>
             </div>
         </div>
         <div class="col">
